# ooc

./: .clangd  .gitignore  CMakeLists.txt  todo.md
.cache/clangd/index/: ooc.cpp.DD53BDC46624869A.idx  test.c.B93B7D218CE82D6F.idx
inc/: my_iterator.h  my_list.h  my_string.h  my_vector.h  object.h
src/: my_iterator.c  my_list.c  my_string.c  my_vector.c  object.c
